# backend_website

./: .replit  LICENSE  README.md  app.py  appold.py  bull.py  deploy.sh  fix_graphene_imports.sh  new one.py  pyproject.toml  replit.nix  requirements.txt  sitecustomize.py  test  vercel.txt
templates/: 2.html  article.html  articleold.html  banner.html  blog.html  error.html  footer.html  home.html  homeold.html  nav.html  owner.html  service.html  services.html  subscription.html
